add benchmark menu

--- a/apps/Android/MnnLlmChat/app/src/main/AndroidManifest.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/AndroidManifest.xml
@@ -86,6 +86,15 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:exported="true"
+            android:name=".experiments.DemoActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
