--- a/apps/Android/MnnLlmChat/app/src/main/cpp/CMakeLists.txt
+++ b/apps/Android/MnnLlmChat/app/src/main/cpp/CMakeLists.txt
@@ -27,7 +27,9 @@ project("mnnllmapp")
 add_library(${CMAKE_PROJECT_NAME} SHARED
         # List C/C++ source files with relative paths to this CMakeLists.txt.
         llm_mnn_jni.cpp
-        diffusion_session.cpp)
+        diffusion_session.cpp
+        llm_session.cpp
+)
 #mnn
 set (MNN_ROOT "${CMAKE_SOURCE_DIR}/../../../../../../../")
 message(ERROR "MNN_ROOT: ${MNN_ROOT}")
