--- a/apps/Android/MnnLlmChat/app/src/main/cpp/CMakeLists.txt
+++ b/apps/Android/MnnLlmChat/app/src/main/cpp/CMakeLists.txt
@@ -51,26 +51,27 @@ include_directories("${CMAKE_SOURCE_DIR}/third_party")
 set(LIB_PATH "${CMAKE_SOURCE_DIR}/../jniLibs/${ANDROID_ABI}")
 
 # Link the shared library
-add_library(llm SHARED IMPORTED)
-set_target_properties(llm PROPERTIES IMPORTED_LOCATION "${LIB_PATH}/libllm.so")
 
 add_library(MNN SHARED IMPORTED)
 set_target_properties(MNN PROPERTIES IMPORTED_LOCATION "${LIB_PATH}/libMNN.so")
 
-add_library(diffusion SHARED IMPORTED)
-set_target_properties(diffusion PROPERTIES IMPORTED_LOCATION "${LIB_PATH}/libdiffusion.so")
-
-add_library(mnn_cl SHARED IMPORTED)
-set_target_properties(mnn_cl PROPERTIES IMPORTED_LOCATION "${LIB_PATH}/libMNN_CL.so")
-
-add_library(mnn_audio SHARED IMPORTED)
-set_target_properties(mnn_audio PROPERTIES IMPORTED_LOCATION "${LIB_PATH}/libMNNAudio.so")
-
-add_library(mnn_cv SHARED IMPORTED)
-set_target_properties(mnn_cv PROPERTIES IMPORTED_LOCATION "${LIB_PATH}/libMNNOpenCV.so")
-
-add_library(mnn_Express SHARED IMPORTED)
-set_target_properties(mnn_Express PROPERTIES IMPORTED_LOCATION "${LIB_PATH}/libMNN_Express.so")
+#add_library(llm SHARED IMPORTED)
+#set_target_properties(llm PROPERTIES IMPORTED_LOCATION "${LIB_PATH}/libllm.so")
+#
+#add_library(diffusion SHARED IMPORTED)
+#set_target_properties(diffusion PROPERTIES IMPORTED_LOCATION "${LIB_PATH}/libdiffusion.so")
+#
+#add_library(mnn_cl SHARED IMPORTED)
+#set_target_properties(mnn_cl PROPERTIES IMPORTED_LOCATION "${LIB_PATH}/libMNN_CL.so")
+#
+#add_library(mnn_audio SHARED IMPORTED)
+#set_target_properties(mnn_audio PROPERTIES IMPORTED_LOCATION "${LIB_PATH}/libMNNAudio.so")
+#
+#add_library(mnn_cv SHARED IMPORTED)
+#set_target_properties(mnn_cv PROPERTIES IMPORTED_LOCATION "${LIB_PATH}/libMNNOpenCV.so")
+#
+#add_library(mnn_Express SHARED IMPORTED)
+#set_target_properties(mnn_Express PROPERTIES IMPORTED_LOCATION "${LIB_PATH}/libMNN_Express.so")
 
 
 # Link your native library with the `.so` file
@@ -82,11 +83,11 @@ target_link_libraries(${CMAKE_PROJECT_NAME}
         # List libraries link to the target library
         android
         log
-        llm
         MNN
-        mnn_Express
-        mnn_cl
-        mnn_audio
-        mnn_cv
-        diffusion
+#        llm
+        #        mnn_Express
+#        mnn_cl
+#        mnn_audio
+#        mnn_cv
+#        diffusion
         )
