Add tools for Linear input analysis and opencl modify

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,6 +78,7 @@ option(MNN_SUPPORT_BF16 "Enable MNN's bf16 op" OFF)
 option(MNN_LOW_MEMORY "Build MNN support low memory for weight quant model." OFF)
 option(MNN_CPU_WEIGHT_DEQUANT_GEMM "Build MNN CPU weight dequant related gemm kernels." OFF)
 option(MNN_BUILD_AUDIO "Build audio api in MNN." OFF)
+option(MNN_GET_THRESHOLD_MODE "Enable threshold collection for LLM sparsity analysis" OFF)
 
 if (MNN_BUILD_MINI)
     set(MNN_SKIPBUILD_GEOMETRY ON)
@@ -216,6 +217,9 @@ if(MNN_SUPPORT_RENDER)
 endif()
 if(MNN_SUPPORT_TRANSFORMER_FUSE)
     add_definitions(-DMNN_SUPPORT_TRANSFORMER_FUSE)
+endif()
+if(MNN_GET_THRESHOLD_MODE)
+    add_definitions(-DGET_THRESHOLD_MODE=1)
 endif()
 # debug options
 if(MNN_DEBUG_MEMORY)
