--- a/apps/Android/MnnLlmChat/app/build.gradle
+++ b/apps/Android/MnnLlmChat/app/build.gradle
@@ -16,8 +16,8 @@ android {
         applicationId "com.alibaba.mnnllm.android"
         minSdk 26
         targetSdk 35
-        versionCode 603
-        versionName "0.6.3"
+        versionCode 604
+        versionName "0.6.4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
@@ -186,8 +186,8 @@ dependencies {
 
     // 日志相关依赖
     implementation "com.jakewharton.timber:timber:5.0.1"
-    implementation files('src/main/libs/android_device_names.aar')
-
+//    implementation(name: 'android_device_names', ext: 'aar')
+    implementation 'com.github.Juude:AndroidDeviceNames:0.0.1'
     testImplementation 'androidx.test:core:1.5.0'
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.robolectric:robolectric:4.12.1'
