--- a/apps/Android/MnnLlmChat/app/build.gradle
+++ b/apps/Android/MnnLlmChat/app/build.gradle
@@ -20,6 +20,26 @@ android {
         externalNativeBuild {
             cmake {
                 cppFlags '-std=c++17'
+                arguments "-DMNN_USE_SSE=OFF",
+                          "-DMNN_BUILD_TEST=ON",
+                          "-DANDROID_STL=c++_static",
+                          "-DMNN_BUILD_BENCHMARK=ON",
+                          "-DANDROID_NATIVE_API_LEVEL=android-21",
+                          "-DMNN_BUILD_FOR_ANDROID_COMMAND=true",
+                          "-DMNN_LOW_MEMORY=true",  
+                          "-DMNN_CPU_WEIGHT_DEQUANT_GEMM=true",
+                          "-DMNN_BUILD_LLM=true",
+                          "-DMNN_SUPPORT_TRANSFORMER_FUSE=true",
+                          "-DMNN_ARM82=true",
+                          "-DMNN_USE_LOGCAT=true",
+                          "-DMNN_OPENCL=true",
+                          "-DLLM_SUPPORT_VISION=true",
+                          "-DMNN_BUILD_OPENCV=true",
+                          "-DMNN_IMGCODECS=true",
+                          "-DLLM_SUPPORT_AUDIO=true",
+                          "-DMNN_BUILD_AUDIO=true",
+                          "-DMNN_BUILD_DIFFUSION=ON",
+                          "-DMNN_SEP_BUILD=OFF"
             }
         }
 
