--- a/apps/Android/MnnLlmChat/gradle.properties
+++ b/apps/Android/MnnLlmChat/gradle.properties
@@ -20,3 +20,5 @@ android.useAndroidX=true
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 android.suppressUnsupportedCompileSdk=35
+#control whether use prebuilt library
+MNN_BUILT_LLM_FROM_PREBUILT=OFF
