--- a/apps/Android/MnnLlmChat/app/build.gradle
+++ b/apps/Android/MnnLlmChat/app/build.gradle
@@ -5,6 +5,9 @@ plugins {
 
 }
 
+// if BUILT_FROM_PREBUILT passed, use its value,or will use  default value "OFF"
+def builtFromPrebuilt = project.hasProperty('MNN_BUILT_LLM_FROM_PREBUILT') ? project.MNN_BUILT_LLM_FROM_PREBUILT : "OFF"
+
 android {
     namespace 'com.alibaba.mnnllm.android'
     compileSdk 35
@@ -20,26 +23,31 @@ android {
         externalNativeBuild {
             cmake {
                 cppFlags '-std=c++17'
-                arguments "-DMNN_USE_SSE=OFF",
-                          "-DMNN_BUILD_TEST=ON",
-                          "-DANDROID_STL=c++_static",
-                          "-DMNN_BUILD_BENCHMARK=ON",
-                          "-DANDROID_NATIVE_API_LEVEL=android-21",
-                          "-DMNN_BUILD_FOR_ANDROID_COMMAND=true",
-                          "-DMNN_LOW_MEMORY=true",  
-                          "-DMNN_CPU_WEIGHT_DEQUANT_GEMM=true",
-                          "-DMNN_BUILD_LLM=true",
-                          "-DMNN_SUPPORT_TRANSFORMER_FUSE=true",
-                          "-DMNN_ARM82=true",
-                          "-DMNN_USE_LOGCAT=true",
-                          "-DMNN_OPENCL=true",
-                          "-DLLM_SUPPORT_VISION=true",
-                          "-DMNN_BUILD_OPENCV=true",
-                          "-DMNN_IMGCODECS=true",
-                          "-DLLM_SUPPORT_AUDIO=true",
-                          "-DMNN_BUILD_AUDIO=true",
-                          "-DMNN_BUILD_DIFFUSION=ON",
-                          "-DMNN_SEP_BUILD=OFF"
+                if (builtFromPrebuilt == "OFF") {
+                    arguments "-DMNN_USE_SSE=OFF",
+                            "-DMNN_BUILD_TEST=ON",
+                            "-DANDROID_STL=c++_static",
+                            "-DMNN_BUILD_BENCHMARK=ON",
+                            "-DANDROID_NATIVE_API_LEVEL=android-21",
+                            "-DMNN_BUILD_FOR_ANDROID_COMMAND=true",
+                            "-DMNN_LOW_MEMORY=true",
+                            "-DMNN_CPU_WEIGHT_DEQUANT_GEMM=true",
+                            "-DMNN_BUILD_LLM=true",
+                            "-DMNN_SUPPORT_TRANSFORMER_FUSE=true",
+                            "-DMNN_ARM82=true",
+                            "-DMNN_USE_LOGCAT=true",
+                            "-DMNN_OPENCL=true",
+                            "-DLLM_SUPPORT_VISION=true",
+                            "-DMNN_BUILD_OPENCV=true",
+                            "-DMNN_IMGCODECS=true",
+                            "-DLLM_SUPPORT_AUDIO=true",
+                            "-DMNN_BUILD_AUDIO=true",
+                            "-DMNN_BUILD_DIFFUSION=ON",
+                            "-DMNN_SEP_BUILD=OFF",
+                            "-DMNN_BUILT_LLM_FROM_PREBUILT=OFF"
+                } else {
+                    arguments "-DMNN_BUILT_LLM_FROM_PREBUILT=ON"
+                }
             }
         }
 
@@ -160,7 +168,6 @@ dependencies {
 
     // 日志相关依赖
     implementation "com.jakewharton.timber:timber:5.0.1"
-
 
 
 }
