--- a/apps/Android/MnnLlmChat/app/src/main/AndroidManifest.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/AndroidManifest.xml
@@ -121,6 +121,11 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".benchmark.CustomQRScannerActivity"
+            android:exported="false"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
+
     </application>
 
 </manifest>
