--- a/apps/Android/MnnLlmChat/app/src/main/cpp/CMakeLists.txt
+++ b/apps/Android/MnnLlmChat/app/src/main/cpp/CMakeLists.txt
@@ -19,6 +19,10 @@ add_library(${CMAKE_PROJECT_NAME} SHARED
         llm_session.cpp
         crash_util.cpp
 )
+
+# Add 16KB page size support (required for Android 15+ devices)
+target_link_options(${CMAKE_PROJECT_NAME} PRIVATE "-Wl,-z,max-page-size=16384")
+
 #mnn
 set (MNN_SOURCE_ROOT "${CMAKE_SOURCE_DIR}/../../../../../../../")
 #set (MNN_SOURCE_ROOT "/Users/songjinde/git/DAI/AliNNPrivate")
