fix: failures for other platforms
Signed-off-by: yanzhang <yanzhang.wang@arm.com>
Change-Id: Id7b3da7f3d0c4ef88f4c48bfa87471eaab764973

--- a/source/backend/cpu/arm/CMakeLists.txt
+++ b/source/backend/cpu/arm/CMakeLists.txt
@@ -120,6 +120,9 @@ if(CMAKE_SYSTEM_PROCESSOR MATCHES "^armv7" OR ARCHS MATCHES "^armv7(;armv7s)?")
     endif()
 elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "^aarch64" OR ARCHS STREQUAL "arm64" OR ARCHS STREQUAL "ARM64")
     message(STATUS "Enabling AArch64 Assemblies")
+    if (MNN_KLEIDIAI)
+       add_definitions(-DMNN_KLEIDIAI_ENABLED=1)
+    endif()
     if (MNN_SME2)
         add_definitions(-DMNN_SME2)
         FILE(GLOB MNN_SME2_AArch64_SRC ${MNN_SME2_AArch64_SRC} ${CMAKE_CURRENT_LIST_DIR}/arm64/sme2_asm/*.[sS])
