--- a/apps/Android/MnnLlmChat/app/build.gradle
+++ b/apps/Android/MnnLlmChat/app/build.gradle
@@ -114,8 +114,7 @@ android {
                     signingConfig signingConfigs.release
                 }
                 applicationIdSuffix ".release"
-            }
-            debug {
+                versionNameSuffix ".gp"
             }
         }
     }
