--- a/.gitignore
+++ b/.gitignore
@@ -379,3 +379,6 @@ source/backend/qnn/3rdParty/include
 project/android/.cxx
 pymnn/android/.cxx/
 pymnn/android/.cxx/abi_configuration_5u53tc49.json
+apps/iOS/MNNLLMChat/MNNLLMiOS/LocalModel/Qwen3-0.6B-MNN
+apps/iOS/MNNLLMChat/Chat/
+apps/iOS/MNNLLMChat/swift-transformers/
