--- a/.gitignore
+++ b/.gitignore
@@ -379,3 +379,5 @@ source/backend/qnn/3rdParty/include
 project/android/.cxx
 pymnn/android/.cxx/
 pymnn/android/.cxx/abi_configuration_5u53tc49.json
+opencv-android-sdk
+3rd_party/openssl-android
