--- a/.gitignore
+++ b/.gitignore
@@ -378,4 +378,8 @@ datasets/*
 source/backend/qnn/3rdParty/include
 project/android/.cxx
 pymnn/android/.cxx/
-pymnn/android/.cxx/abi_configuration_5u53tc49.json
+pymnn/android/.cxx/abi_configuration_5u53tc49.jsonz
+apps/iOS/MNNLLMChat/MNNLLMiOS/LocalModel/Qwen3-0.6B-MNN
+apps/iOS/MNNLLMChat/Chat/
+apps/iOS/MNNLLMChat/swift-transformers/
+apps/iOS/MNNLLMChat/MNNLLMiOS/LocalModel/Qwen2.5-Omni-3B-MNN
