--- a/apps/Android/MnnLlmChat/split_assets.gradle
+++ b/apps/Android/MnnLlmChat/split_assets.gradle
@@ -3,12 +3,15 @@ task splitLargeAssets {
     group = 'build'
     description = 'Split large files in assets into smaller chunks'
     
+    // Only run if ADD_BUILTIN property is set to true
+    def addBuiltinEnabled = project.hasProperty('ADD_BUILTIN') && project.property('ADD_BUILTIN') == 'true'
+    
     // Only run if there are large files that need splitting
     def needsSplitting = false
     def assetsDir = file('src/main/assets/builtin_models')
-    def maxSize = 512 * 1024 * 1024L // 1GB
+    def maxSize = 512 * 1024 * 1024L // 512MB
     
-    if (assetsDir.exists()) {
+    if (addBuiltinEnabled && assetsDir.exists()) {
         assetsDir.listFiles().each { modelDir ->
             if (modelDir.isDirectory()) {
                 modelDir.listFiles().each { file ->
@@ -20,9 +23,14 @@ task splitLargeAssets {
         }
     }
     
-    onlyIf { needsSplitting }
+    onlyIf { addBuiltinEnabled && needsSplitting }
     
     doLast {
+        if (!addBuiltinEnabled) {
+            println "ADD_BUILTIN property not set to true, skipping asset splitting"
+            return
+        }
+        
         if (!assetsDir.exists()) {
             println "Assets directory does not exist: ${assetsDir.absolutePath}"
             return
@@ -89,11 +97,14 @@ task splitLargeAssets {
     }
 }
 
-// Run split task before compress assets (only when needed)
+// Run split task before compress assets (only when ADD_BUILTIN=true)
 // Enable automatic splitting for large model files
 tasks.whenTaskAdded { task ->
     if (task.name == 'compressStandardDebugAssets' || task.name == 'compressGoogleplayDebugAssets') {
-        task.dependsOn splitLargeAssets
+        def addBuiltinEnabled = project.hasProperty('ADD_BUILTIN') && project.property('ADD_BUILTIN') == 'true'
+        if (addBuiltinEnabled) {
+            task.dependsOn splitLargeAssets
+        }
     }
 }
 
