Fix: install Windows DLLs to bin directory
Currently, when building shared libraries on Windows with MSVC or MinGW,
`cmake --install` does not copy the generated `.dll` files because the
`install(TARGETS ...)` command does not specify a `RUNTIME DESTINATION`.
In CMake, `.dll` files are classified as RUNTIME type, and they need an
explicit `RUNTIME DESTINATION` to be installed.

This patch updates the install() rule to:

install(TARGETS MNN
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib
)

- On Windows:
	* `.dll` → bin/
	* `.lib` (import/static library) → lib/
- On Linux/macOS:
	* `.so` / `.dylib` → lib/ (unchanged)
	* No impact on current behavior

This follows CMake's cross-platform installation conventions, and makes
`cmake --install` produce a standard and complete installation layout.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -982,6 +982,7 @@ ELSEIF(NOT APPLE)
   install(TARGETS MNN
       LIBRARY DESTINATION lib
       ARCHIVE DESTINATION lib
+      RUNTIME DESTINATION bin
   )
 ELSE()
   install(TARGETS MNN
