--- a/apps/Android/MnnLlmChat/app/src/main/AndroidManifest.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/AndroidManifest.xml
@@ -130,6 +130,17 @@
             android:foregroundServiceType="dataSync" >
         </service>
 
+        <receiver
+            android:name="com.alibaba.mnnllm.api.openai.manager.ApiServiceActionReceiver"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.alibaba.mnnllm.api.openai.STOP_SERVICE" />
+                <action android:name="com.alibaba.mnnllm.api.openai.COPY_URL" />
+                <action android:name="com.alibaba.mnnllm.api.openai.TEST_PAGE" />
+            </intent-filter>
+        </receiver>
+
         <activity android:name=".debug.WidgetTestActivity"
             android:enabled="true"
             android:exported="true">
